gestione date rivista

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="wrapper_selettori">
       <select class="select_seller"></select>
-      <select class="select_month" ></select>
+      <input class="select_date" type="date" value="2017-01-01" min="2017-01-01" max="2017-12-31">
       <input id="input_vendita" type="text" placeholder="inserisci importo vendita">
       <button id="mybutton" type="button">Aggiungi vendita</button>
     </div>
